fixed bug validator

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 <head>
   <meta charset="UTF-8">
   <meta name="description" content="Web page Agency">
@@ -66,7 +66,7 @@
                 <div class="play__button">
                 </div>
               </div>
-              <video src="" poster="./image/1.jpg" ></video>
+              <video src="./" poster="./image/1.jpg" ></video>
             </div>
           </div>
         </div>
@@ -188,7 +188,7 @@
                       <li class="nav__1__active nav__social__media"><a class="social__media" href="">facebook</a></li>
                       <li class="nav__1__active nav__social__media"><a class="social__media" href="">dribble</a></li>
                       <li class="nav__1__active nav__social__media"><a class="social__media" href="">behance</a></li>
-                      <li class="nav__1__active nav__social__media"><a class="social__media"href="">twitter</a></li>
+                      <li class="nav__1__active nav__social__media"><a class="social__media" href="">twitter</a></li>
                     </ul>
                 </div>
                 <!-- БЛОК КАРТОЧКИ КОМАНДЫ -->
@@ -249,7 +249,7 @@
                       <li class="nav__1__active nav__social__media"><a class="social__media" href="">facebook</a></li>
                       <li class="nav__1__active nav__social__media"><a class="social__media" href="">dribble</a></li>
                       <li class="nav__1__active nav__social__media"><a class="social__media" href="">behance</a></li>
-                      <li class="nav__1__active nav__social__media"><a class="social__media"href="">twitter</a></li>
+                      <li class="nav__1__active nav__social__media"><a class="social__media" href="">twitter</a></li>
                     </ul>
                 </div>
                 <!-- БЛОК КАРТОЧКИ КОМАНДЫ -->
@@ -310,7 +310,7 @@
                       <li class="nav__1__active nav__social__media"><a class="social__media" href="">facebook</a></li>
                       <li class="nav__1__active nav__social__media"><a class="social__media" href="">dribble</a></li>
                       <li class="nav__1__active nav__social__media"><a class="social__media" href="">behance</a></li>
-                      <li class="nav__1__active nav__social__media"><a class="social__media"href="">twitter</a></li>
+                      <li class="nav__1__active nav__social__media"><a class="social__media" href="">twitter</a></li>
                     </ul>
                 </div>
                 <!-- БЛОК КАРТОЧКИ КОМАНДЫ -->
@@ -371,7 +371,7 @@
                       <li class="nav__1__active nav__social__media"><a class="social__media" href="">facebook</a></li>
                       <li class="nav__1__active nav__social__media"><a class="social__media" href="">dribble</a></li>
                       <li class="nav__1__active nav__social__media"><a class="social__media" href="">behance</a></li>
-                      <li class="nav__1__active nav__social__media"><a class="social__media"href="">twitter</a></li>
+                      <li class="nav__1__active nav__social__media"><a class="social__media" href="">twitter</a></li>
                     </ul>
                 </div>
                 <!-- БЛОК КАРТОЧКИ КОМАНДЫ -->
@@ -432,7 +432,7 @@
                       <li class="nav__1__active nav__social__media"><a class="social__media" href="">facebook</a></li>
                       <li class="nav__1__active nav__social__media"><a class="social__media" href="">dribble</a></li>
                       <li class="nav__1__active nav__social__media"><a class="social__media" href="">behance</a></li>
-                      <li class="nav__1__active nav__social__media"><a class="social__media"href="">twitter</a></li>
+                      <li class="nav__1__active nav__social__media"><a class="social__media" href="">twitter</a></li>
                     </ul>
                 </div>
                 <!-- БЛОК КАРТОЧКИ КОМАНДЫ -->
@@ -488,7 +488,7 @@
           <h6 class="form__1__title">Design tips, tricks, and freebies. Delivered weekly.</h6>
           <p class="form__1__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi fugit.</p>
           <div class="form__1">
-            <form action="">
+            <form>
               <input class="form__1__email" placeholder="Email Address...">
               <input class="button__content form__1__button__size" type="submit" value="SUBSCRIBE">
             </form>
@@ -504,12 +504,12 @@
           </p>
           <hr class="line__red">
           <div class="wrap__block__form__2">
-            <form class="wrap__element__form__2" action="">
+            <form class="wrap__element__form__2">
               <div class="form__2__line__1">
                 <input class="form__2 form__2__size" placeholder="Name">
                 <input class="form__2 form__2__size" placeholder="Your Mail">
               </div>
-              <textarea name="" id="" cols="100" rows="10" class="form__2" placeholder="Type your message"></textarea>
+              <textarea name="input field" cols="100" rows="10" class="form__2" placeholder="Type your message"></textarea>
               <input class="button__content form__2__button__size" type="submit" value="SEND MESSAGE">
             </form>
             <div class="block__contact__info">
