--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque ipsam laudantium ipsum, blanditiis nemo necessitatibus nihil eveniet distinctio sed error voluptatem quidem sit obcaecati nisi minima voluptate.
             </p>
-            <form action="">
+            <form>
               <button class="button__content">contact us</button>
             </form>
           </div>
